<resources>
    <string name="app_name">My Notes</string>
    <string name="back_alert_title_add_fragment">Your note is not saved!!</string>
    <string name="back_alert_content_add_fragment">If you exit, your note will not be added. Do you want out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title_not_found">Title not found!!</string>
    <string name="back_alert_content_title_not_found">If you do not add a title, your note will not be added. Do you want to continue editing the note?</string>
    <string name="warning">Warning!!</string>
    <string name="cloud_saved_notes">All notes on the device will be saved in the cloud. Do you want to continue?</string>
    <string name="cloud_download_notes">All notes in the cloud will be downloaded to your device. Do you want to continue?</string>
    <string name="cloud_delete_all_notes">All notes in the cloud will be permanently deleted. Do you want to continue?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="delete_note_cloud">The note has been permanently deleted from the cloud.</string>
    <string name="error_delete_note_cloud">Failed to delete note from cloud.</string>
    <string name="unknown_error_cloud">An unknown error has occurred.</string>
    <string name="empty_mail">Email field can not be left blank.</string>
    <string name="error_mail">Please enter a valid email address</string>
    <string name="empty_pass">Password field can not be left blank.</string>
    <string name="short_pass">The password length must be at least 6</string>
    <string name="different_pass">Passwords are not the same!!</string>
    <string name="welcome_my_notes">Welcome to My Notes :)</string>
    <string name="alredy_register_user">This user already exists</string>
    <string name="unknown_error_register">An error occurred while creating the account</string>
    <string name="delete_notes">All notes on the device will be deleted. Do you want to continue processing?</string>
    <string name="toast_delete_note">All notes on the device have been deleted. You can recover it from the trash.</string>
    <string name="delete_trash">All notes in the trash will be permanently deleted. Do you want to continue processing?</string>
    <string name="toast_delete_trash_all">The trash can has been emptied.</string>
    <string name="save_notes">All the notes in the trash will be recovered. Do you want to continue?</string>
    <string name="saved_notes">All notes have been recovered.</string>
    <string name="sign_out">Are you sure you want to sign out?</string>
    <string name="user_not_registered">This user is not registered.</string>
    <string name="wrong_pass">Wrong password!!</string>
    <string name="error_login">An error occurred while creating the account</string>
    <string name="not_saved">Your note is not saved !!</string>
    <string name="not_saved_content">If you exit, your note will not be updated. Do you want out?</string>
    <string name="update_content">If you do not add a title, your note will not be updated. Do you want to continue editing the note?</string>
    <string name="downloaded_note">Note downloaded from cloud.</string>
    <string name="cloud_note_content">The note will be permanently deleted from the cloud. Do you want to continue?</string>
    <string name="failed_delete_note_cloud">Failed to delete note from cloud.</string>
    <string name="unknown_delete_error_note">An unknown error has occurred.</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_saved">Note Recovered</string>
    <string name="delete_note">Your note will be permanently deleted, do you want to delete it?</string>
    <string name="deleted_note">The note has been permanently deleted.</string>
    <string name="back">Back</string>
    <string name="your_name">Your name?</string>
    <string name="save">Save</string>
    <string name="tap_to_for_title">Tap to for Title</string>
    <string name="tap_to_for_content">Tap to for Content</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_empty">Cloud Empty!</string>
    <string name="settings">Settings</string>
    <string name="upload_my_all_notes">Upload My All Notes</string>
    <string name="download_all_my_notes">Download All My Notes</string>
    <string name="refresh_the_cloud">Refresh the Cloud</string>
    <string name="delete_all_note_from_cloud">Delete All Note From Cloud</string>
    <string name="hi_there">Hi there,</string>
    <string name="search_from_notes">Search from notes...</string>
    <string name="creat_your_first_note">Creat your first note !</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="creat_account">Creat Account</string>
    <string name="notifications">Notifications</string>
    <string name="delete_all_in_notes">Delete All in Notes</string>
    <string name="cloude">Cloude</string>
    <string name="delete_all_trash_in_notes">Delete All Trash in Notes</string>
    <string name="recover_all_notes_in_trash">Recover All Notes in Trash</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="about_us">About Us</string>
    <string name="security_amp_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="log_out">Log Out</string>
    <string name="log_in_or_creat_account">Log In or Creat Account</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="the_recycle_bin_is_empty">The recycle bin is empty</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="trash">Trash</string>

</resources>