<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/house_solid"
        android:title="@string/home" />
    <item
        android:id="@+id/favButton"
        android:title="@string/favorites"
        app:showAsAction="ifRoom"
        android:icon="@drawable/heart_solid"/>
    <item
        android:id="@+id/placeholder"
        android:title="" />
    <item
        android:id="@+id/trash"
        android:title="@string/trash"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_settings_24"/>




</menu>