<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.signinFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mailLayoutsignin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            app:boxBackgroundColor="#2196F3"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/baseline_mail_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass1Layoutt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundColor="#009688"
            app:endIconDrawable="@drawable/baseline_remove_red_eye_24"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:shadowColor="#FFFFFF"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2196F3"
            android:text="@string/login" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
