<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SettingsLoginFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/backSettinglog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/chevron_left"
            android:padding="14dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </RelativeLayout>
        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/user_name_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="İhsan"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/editnamelog"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toEndOf="@id/user_name_log"
                    android:background="@drawable/settings_round7"
                    android:padding="3dp"
                    android:src="@drawable/baseline_edit_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/user_name_log" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:background="@drawable/round_back_settings"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/login_button_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/loginbutton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@drawable/settings_round7"
                        android:src="@drawable/baseline_login_24"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/log_in_or_creat_account"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/loginbutton"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@drawable/round_back_settings"
                android:padding="15dp">
                <RelativeLayout
                    android:id="@+id/cloudSettingsLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/cloudiconl"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@drawable/settings_round"
                        android:src="@drawable/baseline_cloud_24"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/cloud"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/cloudiconl"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/notifications"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@drawable/settings_round2"
                        android:src="@drawable/bell"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/notifications"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/notifications"/>
                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />


                </RelativeLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_settings"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/deletenotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/dnicon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/settings_round6"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_delete_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/dnicon"
                        android:text="@string/delete_all_in_notes"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/deletetrashnotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/dtnicon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/settings_round2"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_delete_forever_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/dtnicon"
                        android:text="@string/delete_all_trash_in_notes"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/recovertrashnotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/rtnicon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/settings_round7"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_recycling_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/rtnicon"
                        android:text="@string/recover_all_notes_in_trash"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:background="@drawable/round_back_settings"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/contactlayoutlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/contact"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/settings_round3"
                        android:padding="12dp"
                        android:src="@drawable/messages_question" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/contact"
                        android:text="@string/send_us_a_message"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/aboutlayoutlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/about"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@drawable/settings_round4"
                        android:src="@drawable/info"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/about_us"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/about"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/sec_priv_layout_log"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/sec_priv"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@drawable/settings_round5"
                        android:src="@drawable/shield_check"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_centerVertical="true"
                        android:text="@string/security_amp_privacy"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/sec_priv"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/baseline_chevron_right_24" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
</layout>